[tool.pytest.ini_options]
pythonpath = ["src"]

[project]
name = "lng-geoenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "openenv>=0.1.13",
    "flask>=3.0.0",
]

[project.scripts]
server = "server.app:main"
